# VeteranAPI

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
db-init/: 01-create-database.sql  02-create-user.sql
nginx/: nginx.conf
src/: main.py
src/admin/: auth.py  model_view.py  setup.py
src/api/: auth.py  news.py  user.py
src/database/: base.py  engine.py  fields.py  models.py  repository.py  signals.py
src/migrations/: env.py
src/migrations/versions/: 0c1a626eedc8_.py  7e270626eb9d_.py  cf45057b7399_.py  f448b4140e7e_.py
src/schemas/: auth.py  news.py  user.py
src/services/: auth.py  news.py  user.py
src/shared/: config.py  depends.py
src/shared/logger/: config.py  logger.py
src/utils/: cleanup_token.py  jwt_manager.py  minio_manger.py  password_hash.py  redis_manager.py  sms.py
test/: test_1_health_check.py  test_2_auth.py
